--- a/index.html
+++ b/index.html
@@ -20,10 +20,16 @@
         <nav>
           <div class="navbar">
             <ul>
-              <li><a href="#">Beranda</a></li>
-              <li><a href="#">Bidang</a></li>
-              <li><a href="#">Tentang</a></li>
-              <li><a href="#">Kontak</a></li>
+              <li class="navbar-item"><a href="#">Beranda</a></li>
+              <li class="navbar-item" style="font-size: 1.2rem;">Bidang
+                <ul class="navbar-down">
+                  <li class="navbar-item">PP</li>
+                  <li class="navbar-item">PTD</li>
+                  <li class="navbar-item">PK</li>
+                </ul>
+              </li>
+              <li class="navbar-item"><a href="#">Tentang</a></li>
+              <li class="navbar-item"><a href="#">Kontak</a></li>
             </ul>
           </div>
         </nav>
@@ -32,5 +38,21 @@
         </div>
       </div>
     </header>
+    <script>
+      const navItem = document.querySelectorAll(".navbar-item")
+
+navItem.forEach((nav) => {
+  const navDown = nav.querySelector(".navbar-down")
+
+  if (navDown) {
+    nav.addEventListener("mouseenter", () => {
+      navDown.classList.add("navbar-expand")
+    });
+    nav.addEventListener("mouseleave", () => {
+      navDown.classList.remove("navbar-expand");
+    })
+  }
+})
+    </script>
   </body>
 </html>
