--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <div class="navbar">
             <ul>
               <li class="navbar-item"><a href="#">Beranda</a></li>
-              <li class="navbar-item" style="font-size: 1.2rem">
+              <li class="navbar-item" style="font-size: 1.2rem; padding: 0.5rem 1.8rem;" >
                 Bidang
                 <ul class="navbar-down">
                   <li class="navbar-item">PP</li>
