styling dan animation item menu dropdown

--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
         <nav>
           <div class="navbar">
             <ul>
-              <li class="navbar-item"><a href="#">Beranda</a></li>
-              <li class="navbar-item" style="font-size: 1.2rem; padding: 0.5rem 1.8rem;" >
+              <li class="navbar-item"><a class="item" href="#">Beranda</a></li>
+              <li class="navbar-item" style="font-size: 1.2rem; padding: 0.5rem 1.8rem; width: 140px; margin: 0;" >
                 Bidang
                 <ul class="navbar-down">
-                  <li class="navbar-item">PP</li>
-                  <li class="navbar-item">PTD</li>
-                  <li class="navbar-item">PK</li>
+                  <li class="navbar-item"><a href="#" class="item-down">Pertolongan Pertama</a></li>
+                  <li class="navbar-item"><a href="#" class="item-down">Pertolongan Tandu Darurat</a></li>
+                  <li class="navbar-item"><a href="#" class="item-down">Perawatan Keluarga</a></li>
                 </ul>
               </li>
-              <li class="navbar-item"><a href="#">Tentang</a></li>
-              <li class="navbar-item"><a href="#">Kontak</a></li>
+              <li class="navbar-item"><a class="item" href="#">Tentang</a></li>
+              <li class="navbar-item"><a class="item" href="#">Kontak</a></li>
             </ul>
           </div>
         </nav>
@@ -39,6 +39,7 @@
         </div>
       </div>
     </header>
+    <main></main>
     <script>
       const navItem = document.querySelectorAll('.navbar-item');
 
