--- a/index.html
+++ b/index.html
@@ -15,58 +15,9 @@
   <body>
     <header-app></header-app>
     <main>
-      <section>
-        <div class="hero-section">
-          <div class="hero-text">
-            <h1>Bersama Smetaone</h1>
-          </div>
-          <div class="hero-gallery">
-            <img
-              src="./src/assets/image1.jpeg"
-              alt="foto bersama"
-              class="gallery-image active"
-            />
-            <img
-              src="./src/assets/image2.jpeg"
-              alt="foto bersama"
-              class="gallery-image"
-            />
-            <img
-              src="./src/assets/image3.jpeg"
-              alt="foto bersama"
-              class="gallery-image"
-            />
-            <img
-              src="./src/assets/image4.jpeg"
-              alt="foto bersama"
-              class="gallery-image"
-            />
-            <img
-              src="./src/assets/image5.jpeg"
-              alt="foto bersama"
-              class="gallery-image"
-            />
-          </div>
-        </div>
-      </section>
+      <hero-section></hero-section>
     </main>
     <script>
-      const images = document.querySelectorAll('.gallery-image');
-      let currentImageIndex = 0;
-
-      function changeImage() {
-        // Hapus class "active" dari gambar yang sedang ditampilkan
-        images[currentImageIndex].classList.remove('active');
-
-        // Update index gambar berikutnya
-        currentImageIndex = (currentImageIndex + 1) % images.length;
-
-        // Tambahkan class "active" pada gambar yang baru
-        images[currentImageIndex].classList.add('active');
-      }
-
-      // Panggil fungsi changeImage setiap 3 detik
-      setInterval(changeImage, 3000);
     </script>
   </body>
 </html>
