--- a/index.html
+++ b/index.html
@@ -15,32 +15,16 @@
   <body>
     <header-app></header-app>
     <main>
-      <hero-section></hero-section>
       <section>
-        <div class="smetaone-section">
-          <div class="smetaone-info">
-            <div class="smetaone-image">
-              <img
-                src="./src/assets/logo-smetaone.jpeg"
-                alt="smetaone logo"
-                width="250px"
-              />
-            </div>
-            <div class="smetaone-desc">
-              <h3>Apa itu Smetaone?</h3>
-              <p>
-                Smetaone adalah sebuah Organisasi
-                <span id="txt">"Palang Merah Remaja"</span>di Sekolah SMK Negeri
-                1 Bandar Lampung. Smetaone hadir untuk memberikan edukasi,
-                pelatihan, dan keterampilan dalam bidang kesehatan serta
-                kemanusiaan. Sebagai bagian dari ekstrakurikuler, organisasi ini
-                rutin mengadakan kegiatan sosial, seperti donor darah,
-                penyuluhan kesehatan, dan lain sebagainya. Melalui semangat
-                kepedulian dan kerja sama, Smetaone bertujuan untuk membentuk
-                generasi muda yang tanggap, peduli, dan siap membantu sesama
-                dalam keadaan darurat maupun situasi kemanusiaan lainnya.
-              </p>
-            </div>
+        <hero-section></hero-section>
+      </section>
+      <section>
+        <smetaone-section></smetaone-section>
+      </section>
+      <section>
+        <div class="goals-section">
+          <div class="vision-mission">
+            
           </div>
         </div>
       </section>
