--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
       </section>
       <section>
         <div class="goals-section">
-          <div class="vision-mission">
-            
-          </div>
+          <div class="vision-mission"></div>
         </div>
       </section>
     </main>
