section baru visi misi

--- a/index.html
+++ b/index.html
@@ -21,7 +21,45 @@
       </section>
       <section>
         <div class="goals-section">
-          <div class="vision-mission"></div>
+          <div class="vision-mission">
+            <div class="title-goals">
+              <h2>Visi & Misi</h2>
+            </div>
+            <div class="desc">
+              <div class="vision">
+                <h3>Visi</h3>
+                <p>
+                  Menjadikan eskstrakulikuler PMR sebagai tampat generasi muda
+                  Palang Merah untuk mengembangkan karakter, jiwa sosial, dan
+                  jiwa kemanusiaan serta berakhlak mulia dengan memegang teguh
+                  prinsip-prinsip dasar Palang Merah dan bulan sabit merah
+                  Internasiaonal serta Tri Bakti Palang Merah.
+                </p>
+              </div>
+              <div class="mission">
+                <h3>Misi</h3>
+                <ol type="1">
+                  <li>Menguatkan dan mengembangkan organisasi</li>
+                  <li>Meningkatkan dan mengembangkan kualitas SDM</li>
+                  <li>
+                    Menanamkan rasa kesukarelaan dan jiwa sosial kemanusiaan
+                  </li>
+                  <li>
+                    Mengembangkan kegiatan Kepalang Merahan yang bermasyarakat
+                  </li>
+                  <li>Meningkatkan dan mengembangkan jejaring kerjasama</li>
+                  <li>
+                    Melaksanakan pengamalan Prinsip-Prinsip Dasar Gerakan Palang
+                    Merah Remaja dan Bulan Sabit Merah Internasional
+                  </li>
+                  <li>
+                    Mengembangkan komunikasi, informasi dan edukasi Kepalang
+                    Merahan
+                  </li>
+                </ol>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </main>
