--- a/index.html
+++ b/index.html
@@ -22,6 +22,57 @@
       <section>
         <goals-section></goals-section>
       </section>
+      <section>
+        <div class="organization-structure">
+          <div class="structure">
+            <div class="title-structure">
+              <h2>Struktur Organisasi</h2>
+            </div>
+            <div class="team-group">
+              <div class="team-char">
+                <h3>Ketua</h3>
+                <img src="./profil.jpg" alt="profil" width="200px">
+                <figcaption>Meilina Pratiwi</figcaption>
+              </div>
+              <div class="team-char">
+                <h3>Wakil Ketua</h3>
+                <img src="./profil.jpg" alt="profil" width="200px">
+                <figcaption>Kezia Njayani Dhiputri</figcaption>
+              </div>
+              <div class="team-char">
+                <h3>Bendahara</h3>
+                <img src="./profil.jpg" alt="profil" width="200px">
+                <figcaption>Andi Kurniawan</figcaption>
+              </div>
+              <div class="team-char">
+                <h3>Koordinator</h3>
+                <img src="./profil.jpg" alt="profil" width="200px">
+                <figcaption>Sinta Putri</figcaption>
+              </div>
+              <div class="team-char">
+                <h3>Koordinator</h3>
+                <img src="./profil.jpg" alt="profil" width="200px">
+                <figcaption>Sinta Putri</figcaption>
+              </div>
+              <div class="team-char">
+                <h3>Koordinator</h3>
+                <img src="./profil.jpg" alt="profil" width="200px">
+                <figcaption>Sinta Putri</figcaption>
+              </div>
+              <div class="team-char">
+                <h3>Koordinator</h3>
+                <img src="./profil.jpg" alt="profil" width="200px">
+                <figcaption>Sinta Putri</figcaption>
+              </div>
+              <div class="team-char">
+                <img src="./profil.jpg" alt="profil" width="200px">
+                <figcaption>Sinta Putri</figcaption>
+              </div>
+              
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <script></script>
   </body>
