--- a/index.html
+++ b/index.html
@@ -31,44 +31,43 @@
             <div class="team-group">
               <div class="team-char">
                 <h3>Ketua</h3>
-                <img src="./profil.jpg" alt="profil" width="200px">
+                <img src="./profil.jpg" alt="profil" width="200px" />
                 <figcaption>Meilina Pratiwi</figcaption>
               </div>
               <div class="team-char">
                 <h3>Wakil Ketua</h3>
-                <img src="./profil.jpg" alt="profil" width="200px">
+                <img src="./profil.jpg" alt="profil" width="200px" />
                 <figcaption>Kezia Njayani Dhiputri</figcaption>
               </div>
               <div class="team-char">
                 <h3>Bendahara</h3>
-                <img src="./profil.jpg" alt="profil" width="200px">
+                <img src="./profil.jpg" alt="profil" width="200px" />
                 <figcaption>Andi Kurniawan</figcaption>
               </div>
               <div class="team-char">
                 <h3>Koordinator</h3>
-                <img src="./profil.jpg" alt="profil" width="200px">
+                <img src="./profil.jpg" alt="profil" width="200px" />
                 <figcaption>Sinta Putri</figcaption>
               </div>
               <div class="team-char">
                 <h3>Koordinator</h3>
-                <img src="./profil.jpg" alt="profil" width="200px">
+                <img src="./profil.jpg" alt="profil" width="200px" />
                 <figcaption>Sinta Putri</figcaption>
               </div>
               <div class="team-char">
                 <h3>Koordinator</h3>
-                <img src="./profil.jpg" alt="profil" width="200px">
+                <img src="./profil.jpg" alt="profil" width="200px" />
                 <figcaption>Sinta Putri</figcaption>
               </div>
               <div class="team-char">
                 <h3>Koordinator</h3>
-                <img src="./profil.jpg" alt="profil" width="200px">
+                <img src="./profil.jpg" alt="profil" width="200px" />
                 <figcaption>Sinta Putri</figcaption>
               </div>
               <div class="team-char">
-                <img src="./profil.jpg" alt="profil" width="200px">
+                <img src="./profil.jpg" alt="profil" width="200px" />
                 <figcaption>Sinta Putri</figcaption>
               </div>
-              
             </div>
           </div>
         </div>
