--- a/index.html
+++ b/index.html
@@ -26,48 +26,25 @@
         <div class="organization-structure">
           <div class="structure">
             <div class="title-structure">
-              <h2>Struktur Organisasi</h2>
+              <h2>Tim Pengurus</h2>
             </div>
-            <div class="team-group">
-              <div class="team-char">
-                <h3>Ketua</h3>
-                <img src="./profil.jpg" alt="profil" width="200px" />
-                <figcaption>Meilina Pratiwi</figcaption>
+            <div class="organizer">
+              <div class="follow">
+                <img src="user.png" alt="#" width="250px">
               </div>
-              <div class="team-char">
-                <h3>Wakil Ketua</h3>
-                <img src="./profil.jpg" alt="profil" width="200px" />
-                <figcaption>Kezia Njayani Dhiputri</figcaption>
+              <div class="follow">
+                <img src="user.png" alt="#" width="250px">
               </div>
-              <div class="team-char">
-                <h3>Bendahara</h3>
-                <img src="./profil.jpg" alt="profil" width="200px" />
-                <figcaption>Andi Kurniawan</figcaption>
+              <div class="follow">
+                <img src="user.png" alt="#" width="250px">
               </div>
-              <div class="team-char">
-                <h3>Koordinator</h3>
-                <img src="./profil.jpg" alt="profil" width="200px" />
-                <figcaption>Sinta Putri</figcaption>
+              <div class="follow">
+                <img src="user.png" alt="#" width="250px">
               </div>
-              <div class="team-char">
-                <h3>Koordinator</h3>
-                <img src="./profil.jpg" alt="profil" width="200px" />
-                <figcaption>Sinta Putri</figcaption>
+              <div class="follow">
+                <img src="user.png" alt="#" width="250px">
               </div>
-              <div class="team-char">
-                <h3>Koordinator</h3>
-                <img src="./profil.jpg" alt="profil" width="200px" />
-                <figcaption>Sinta Putri</figcaption>
-              </div>
-              <div class="team-char">
-                <h3>Koordinator</h3>
-                <img src="./profil.jpg" alt="profil" width="200px" />
-                <figcaption>Sinta Putri</figcaption>
-              </div>
-              <div class="team-char">
-                <img src="./profil.jpg" alt="profil" width="200px" />
-                <figcaption>Sinta Putri</figcaption>
-              </div>
+              
             </div>
           </div>
         </div>
