--- a/index.html
+++ b/index.html
@@ -23,31 +23,7 @@
         <goals-section></goals-section>
       </section>
       <section>
-        <div class="organization-structure">
-          <div class="structure">
-            <div class="title-structure">
-              <h2>Tim Pengurus</h2>
-            </div>
-            <div class="organizer">
-              <div class="follow">
-                <img src="user.png" alt="#" width="250px">
-              </div>
-              <div class="follow">
-                <img src="user.png" alt="#" width="250px">
-              </div>
-              <div class="follow">
-                <img src="user.png" alt="#" width="250px">
-              </div>
-              <div class="follow">
-                <img src="user.png" alt="#" width="250px">
-              </div>
-              <div class="follow">
-                <img src="user.png" alt="#" width="250px">
-              </div>
-              
-            </div>
-          </div>
-        </div>
+        <organization-structure></organization-structure>  
       </section>
     </main>
     <script></script>
