--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
         <goals-section></goals-section>
       </section>
       <section>
-        <organization-structure></organization-structure>  
+        <organization-structure></organization-structure>
       </section>
     </main>
-    <script></script>
+    <script>
+    </script>
   </body>
 </html>
