--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
         <organization-structure></organization-structure>
       </section>
     </main>
-    <script>
-    </script>
+    <script></script>
   </body>
 </html>
