--- a/tes.html
+++ b/tes.html
@@ -1,55 +1,55 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Seamless Auto Scroll</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      overflow: hidden;
-    }
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Seamless Auto Scroll</title>
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+      }
 
-    .scroll-container {
-      width: 100%;
-      height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: flex-start;
-      overflow: hidden;
-      white-space: nowrap;
-    }
+      .scroll-container {
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        overflow: hidden;
+        white-space: nowrap;
+      }
 
-    .scroll-container img {
-      height: 100vh;
-      display: inline-block;
-    }
-  </style>
-</head>
-<body>
-  <div id="scroll-container" class="scroll-container">
-    <img src="./src/assets/user.png" alt="Scrolling Image">
-    <img src="./src/assets/user.png" alt="Scrolling Image">
-  </div>
+      .scroll-container img {
+        height: 100vh;
+        display: inline-block;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="scroll-container" class="scroll-container">
+      <img src="./src/assets/user.png" alt="Scrolling Image" />
+      <img src="./src/assets/user.png" alt="Scrolling Image" />
+    </div>
 
-  <script>
-    const scrollContainer = document.getElementById('scroll-container');
-    let scrollAmount = 0;
+    <script>
+      const scrollContainer = document.getElementById('scroll-container');
+      let scrollAmount = 0;
 
-    function autoScroll() {
+      function autoScroll() {
         scrollAmount += 2;
         scrollContainer.scrollLeft = scrollAmount;
 
         // If the scroll reaches the width of one image, reset smoothly
         if (scrollAmount >= scrollContainer.scrollWidth / 2) {
-            scrollAmount = 0;  // Reset scroll position to the start
+          scrollAmount = 0; // Reset scroll position to the start
         }
 
         requestAnimationFrame(autoScroll);
-    }
+      }
 
-    autoScroll();
-  </script>
-</body>
+      autoScroll();
+    </script>
+  </body>
 </html>
