--- a/index.html
+++ b/index.html
@@ -25,6 +25,24 @@
       <section>
         <organization-structure></organization-structure>
       </section>
+      <section>
+        <div class="bidang-section">
+          <div class="title-section">
+            <h2>Bidang</h2>
+          </div>
+          <div class="content-section">
+            <div class="card">
+              <img src="image1.jpeg" alt="">
+            </div>
+            <div class="card">
+              <img src="image1.jpeg" alt="">
+            </div>
+            <div class="card">
+              <img src="image1.jpeg" alt="">
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <script></script>
   </body>
