--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
         <div class="bidang-section">
           <div class="content-section">
             <div class="card">
-              <img src="image1.jpeg" alt="">
+              <img src="image1.jpeg" alt="" />
             </div>
             <div class="card">
-              <img src="image1.jpeg" alt="">
+              <img src="image1.jpeg" alt="" />
             </div>
             <div class="card">
-              <img src="image1.jpeg" alt="">
+              <img src="image1.jpeg" alt="" />
             </div>
           </div>
         </div>
