styling dan ubah gambar bidang section

--- a/index.html
+++ b/index.html
@@ -29,13 +29,19 @@
         <div class="bidang-section">
           <div class="content-section">
             <div class="card">
-              <img src="image1.jpeg" alt="" />
+              <img src="PP.jpeg" alt="pertolongan pertama" />
+              <a href="#capt-pp">Lihat selengkapnya. . .</a>
+              <figcaption id="capt-pp"></figcaption>
             </div>
             <div class="card">
-              <img src="image1.jpeg" alt="" />
+              <img src="PTD.jpeg" alt="pertolongan tandu darurat" />
+              <a href="#capt-ptd">Lihat selengkapnya. . .</a>
+              <figcaption id="capt-ptd"></figcaption>
             </div>
             <div class="card">
-              <img src="image1.jpeg" alt="" />
+              <img src="PK.jpeg" alt="pertolongan keluarga" />
+              <a href="#capt-pk">Lihat selengkapnya. . .</a>
+              <figcaption id="capt-pk"></figcaption>
             </div>
           </div>
         </div>
