--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="logo.jpeg" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=keyboard_arrow_down" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=keyboard_arrow_down"
+    />
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
     </style>
@@ -30,24 +33,36 @@
         <div class="bidang-section">
           <div class="content-section">
             <div class="card">
-              <img src="PP.jpeg" style="animation-delay: 0s;" alt="pertolongan pertama" />
+              <img
+                src="PP.jpeg"
+                style="animation-delay: 0s"
+                alt="pertolongan pertama"
+              />
               <span class="material-symbols-outlined">
                 keyboard_arrow_down
-                </span>
+              </span>
               <figcaption id="capt-pp"></figcaption>
             </div>
             <div class="card">
-              <img src="PTD.jpeg" style="animation-delay: 1s;" alt="pertolongan tandu darurat" />
+              <img
+                src="PTD.jpeg"
+                style="animation-delay: 1s"
+                alt="pertolongan tandu darurat"
+              />
               <span class="material-symbols-outlined">
                 keyboard_arrow_down
-                </span>
+              </span>
               <figcaption id="capt-ptd"></figcaption>
             </div>
             <div class="card">
-              <img src="PK.jpeg" style="animation-delay: 2s;" alt="pertolongan keluarga" />
+              <img
+                src="PK.jpeg"
+                style="animation-delay: 2s"
+                alt="pertolongan keluarga"
+              />
               <span class="material-symbols-outlined">
                 keyboard_arrow_down
-                </span>
+              </span>
               <figcaption id="capt-pk"></figcaption>
             </div>
           </div>
