ubah struktur folder

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="logo.jpeg" />
+    <link rel="icon" href="/image/logo.jpeg" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=keyboard_arrow_down"
@@ -34,7 +34,7 @@
           <div class="content-section">
             <div class="card">
               <img
-                src="PP.jpeg"
+                src="image/PP.jpeg"
                 style="animation-delay: 0s"
                 alt="pertolongan pertama"
               />
@@ -45,7 +45,7 @@
             </div>
             <div class="card">
               <img
-                src="PTD.jpeg"
+                src="image/PTD.jpeg"
                 style="animation-delay: 1s"
                 alt="pertolongan tandu darurat"
               />
@@ -56,7 +56,7 @@
             </div>
             <div class="card">
               <img
-                src="PK.jpeg"
+                src="image/PK.jpeg"
                 style="animation-delay: 2s"
                 alt="pertolongan keluarga"
               />
