--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -34,7 +34,7 @@
           <div class="content-section">
             <div class="card">
               <img
-                src="image/PP.jpeg"
+                src="PP.jpeg"
                 style="animation-delay: 0s"
                 alt="pertolongan pertama"
               />
@@ -45,7 +45,7 @@
             </div>
             <div class="card">
               <img
-                src="image/PTD.jpeg"
+                src="PTD.jpeg"
                 style="animation-delay: 1s"
                 alt="pertolongan tandu darurat"
               />
@@ -56,7 +56,7 @@
             </div>
             <div class="card">
               <img
-                src="image/PK.jpeg"
+                src="PK.jpeg"
                 style="animation-delay: 2s"
                 alt="pertolongan keluarga"
               />
