ubah kerangka section bidang dan styling

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -33,37 +33,52 @@
         <div class="bidang-section">
           <div class="content-section">
             <div class="card">
+              <div class="card-img">
               <img
                 src="PP.jpeg"
-                style="animation-delay: 0s"
+                style="animation-delay: 0s;"
                 alt="pertolongan pertama"
               />
-              <span class="material-symbols-outlined">
+              <span id="arrow-top" class="material-symbols-outlined">
                 keyboard_arrow_down
               </span>
-              <figcaption id="capt-pp"></figcaption>
+            </div>
+              <div class="capt">
+                <h3>Pertolongan Pertama</h3>
+                <p>Bidang Pertolongan Pertama (PP) dalam Palang Merah Remaja bertujuan memberikan pengetahuan dasar tentang penanganan cedera dan bantuan medis dasar kepada remaja. Anggota PMR dilatih untuk memahami tindakan cepat dan tepat saat terjadi kecelakaan atau situasi darurat.</p>
+              </div>
             </div>
             <div class="card">
+              <div class="card-img">
               <img
                 src="PTD.jpeg"
                 style="animation-delay: 1s"
                 alt="pertolongan tandu darurat"
               />
-              <span class="material-symbols-outlined">
+              <span id="arrow-top" class="material-symbols-outlined">
                 keyboard_arrow_down
               </span>
-              <figcaption id="capt-ptd"></figcaption>
+            </div>
+            <div class="capt">
+              <h3>Pertolongan Tandu Darurat</h3>
+              <p>Bidang Pertolongan Tandu Darurat (PTD) dalam Palang Merah Remaja berfokus pada teknik pembuatan tandu darurat untuk mengevakuasi korban yang mengalami kecelakaan atau bencana ketempat yang layak dan aman.</p>
+            </div>
             </div>
             <div class="card">
+              <div class="card-img">
               <img
                 src="PK.jpeg"
                 style="animation-delay: 2s"
-                alt="pertolongan keluarga"
+                alt="perawatan keluarga"
               />
-              <span class="material-symbols-outlined">
+              <span id="arrow-top" class="material-symbols-outlined">
                 keyboard_arrow_down
               </span>
-              <figcaption id="capt-pk"></figcaption>
+            </div>
+            <div class="capt">
+              <h3>Perawatan Keluarga</h3>
+              <p>Perawatan Keluarga (PK) dalam Palang Merah Remaja mengajarkan keterampilan dasar dalam menjaga kesehatan dan merawat anggota keluarga, dengan menggunakan alat-alat yang ada di lingkungan keluarga.</p>
+            </div>
             </div>
           </div>
         </div>
