--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -33,8 +33,6 @@
         <bidang-section></bidang-section>
       </section>
     </main>
-    <script>
-      
-    </script>
+    <script></script>
   </body>
 </html>
