perubahan smetaone section

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/image/logo.jpeg" />
+    <link rel="icon" href="/logo.jpeg" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=keyboard_arrow_down"
@@ -21,7 +21,33 @@
         <hero-section></hero-section>
       </section>
       <section>
-        <smetaone-section></smetaone-section>
+        <div class="smetaone-section">
+          <div class="smetaone-info">
+            <div class="smetaone-image">
+              <img
+                src="logo-smetaone.jpeg"
+                alt="smetaone logo"
+                width="200px"
+              />
+            </div>
+            <div class="smetaone-desc">
+              <h3>Apa itu Smetaone?</h3>
+              <p>
+                Smetaone adalah sebuah Organisasi
+                <span style="color: #ec3f35;">"Palang Merah Remaja" </span>di Sekolah SMK Negeri
+                1 Bandar Lampung. Smetaone hadir untuk memberikan edukasi,
+                pelatihan, dan keterampilan dalam bidang kesehatan serta
+                kemanusiaan. Sebagai bagian dari ekstrakurikuler. Melalui semangat
+                kepedulian dan kerja sama, Smetaone bertujuan untuk membentuk
+                generasi muda yang tanggap, peduli, dan siap membantu sesama
+                dalam keadaan darurat maupun situasi kemanusiaan lainnya.
+              </p>
+            </div>
+          </div>
+          <div class="smetaone-char">
+            <img src="/robin2.png" width="250px" alt="">
+          </div>
+        </div>
       </section>
       <section>
         <goals-section></goals-section>
@@ -32,7 +58,18 @@
       <section>
         <bidang-section></bidang-section>
       </section>
+      <section>
+        <div class="cta-section">
+          <div class="cta-content">
+            <h2>Ikuti Kegiatan Seru Bersama Kami!</h2>
+          </div>
+          <div class="cta-register">
+            <button>Daftar Sekarang</button>
+          </div>
+        </div>
+      </section>
     </main>
+    <footer></footer>
     <script></script>
   </body>
 </html>
