--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -24,28 +24,25 @@
         <div class="smetaone-section">
           <div class="smetaone-info">
             <div class="smetaone-image">
-              <img
-                src="logo-smetaone.jpeg"
-                alt="smetaone logo"
-                width="200px"
-              />
+              <img src="logo-smetaone.jpeg" alt="smetaone logo" width="200px" />
             </div>
             <div class="smetaone-desc">
               <h3>Apa itu Smetaone?</h3>
               <p>
                 Smetaone adalah sebuah Organisasi
-                <span style="color: #ec3f35;">"Palang Merah Remaja" </span>di Sekolah SMK Negeri
-                1 Bandar Lampung. Smetaone hadir untuk memberikan edukasi,
-                pelatihan, dan keterampilan dalam bidang kesehatan serta
-                kemanusiaan. Sebagai bagian dari ekstrakurikuler. Melalui semangat
-                kepedulian dan kerja sama, Smetaone bertujuan untuk membentuk
-                generasi muda yang tanggap, peduli, dan siap membantu sesama
-                dalam keadaan darurat maupun situasi kemanusiaan lainnya.
+                <span style="color: #ec3f35">"Palang Merah Remaja" </span>di
+                Sekolah SMK Negeri 1 Bandar Lampung. Smetaone hadir untuk
+                memberikan edukasi, pelatihan, dan keterampilan dalam bidang
+                kesehatan serta kemanusiaan. Sebagai bagian dari
+                ekstrakurikuler. Melalui semangat kepedulian dan kerja sama,
+                Smetaone bertujuan untuk membentuk generasi muda yang tanggap,
+                peduli, dan siap membantu sesama dalam keadaan darurat maupun
+                situasi kemanusiaan lainnya.
               </p>
             </div>
           </div>
           <div class="smetaone-char">
-            <img src="/robin2.png" width="250px" alt="">
+            <img src="/robin2.png" width="250px" alt="" />
           </div>
         </div>
       </section>
