--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/logo-smetaone.jpeg" />
+    <link rel="icon" href="logos/logo-smetaone.jpeg" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=keyboard_arrow_down"
@@ -24,7 +24,7 @@
         <div class="smetaone-section">
           <div class="smetaone-info">
             <div class="smetaone-image">
-              <img src="logo-smetaone.jpeg" alt="smetaone logo" width="200px" />
+              <img src="logos/logo-smetaone.jpeg" alt="smetaone logo" width="200px" />
             </div>
             <div class="smetaone-desc">
               <h3>Apa itu Smetaone?</h3>
@@ -42,7 +42,7 @@
             </div>
           </div>
           <div class="smetaone-char">
-            <img src="/robin2.png" width="250px" alt="" />
+            <img src="char/robin2.png" width="250px" alt="" />
           </div>
         </div>
       </section>
