--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -48,7 +48,50 @@
         </div>
       </section>
       <section>
-        <goals-section></goals-section>
+        <div class="goals-section">
+          <div class="title-goals">
+            <h2>Visi & Misi</h2>
+          </div>
+          <div class="vision-mission">
+            <div class="goals-char">
+              <img src="char/luffy.png" alt="">
+            </div>
+            <div class="desc">
+              <div class="vision">
+                <h3>Visi</h3>
+                <p>
+                  Menjadikan eskstrakulikuler PMR sebagai tampat generasi muda
+                  Palang Merah untuk mengembangkan karakter, jiwa sosial, dan
+                  jiwa kemanusiaan serta berakhlak mulia dengan memegang teguh
+                  prinsip-prinsip dasar Palang Merah dan bulan sabit merah
+                  Internasiaonal serta Tri Bakti Palang Merah.
+                </p>
+              </div>
+              <div class="mission">
+                <h3>Misi</h3>
+                <ul style="padding: 0 1.5rem;" type="-">
+                  <li>Menguatkan dan mengembangkan organisasi</li>
+                  <li>Meningkatkan dan mengembangkan kualitas SDM</li>
+                  <li>
+                    Menanamkan rasa kesukarelaan dan jiwa sosial kemanusiaan
+                  </li>
+                  <li>
+                    Mengembangkan kegiatan Kepalang Merahan yang bermasyarakat
+                  </li>
+                  <li>Meningkatkan dan mengembangkan jejaring kerjasama</li>
+                  <li>
+                    Melaksanakan pengamalan Prinsip-Prinsip Dasar Gerakan Palang
+                    Merah Remaja dan Bulan Sabit Merah Internasional
+                  </li>
+                  <li>
+                    Mengembangkan komunikasi, informasi dan edukasi Kepalang
+                    Merahan
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
       <section>
         <organization-structure></organization-structure>
